sdk/lib/zxio/include/lib/zxio/zxio.h


ZXIO_EXPORT zx_status_t zxio_create(zx_handle_t handle, zxio_storage_t* storage);
ZXIO_EXPORT zx_status_t zxio_create_with_on_open(zx_handle_t handle, zxio_storage_t* storage);
ZXIO_EXPORT zx_status_t zxio_create_with_info(zx_handle_t handle,
                                              const zx_info_handle_basic_t* handle_info,
                                              zxio_storage_t* storage);
zx_status_t zxio_create_with_type(zxio_storage_t* storage, zxio_object_type_t type, ...);
ZXIO_EXPORT zx_status_t zxio_close(zxio_t* io, bool should_wait);
ZXIO_EXPORT zx_status_t zxio_release(zxio_t* io, zx_handle_t* out_handle);
zx_status_t zxio_borrow(zxio_t* io, zx_handle_t* out_handle);
ZXIO_EXPORT zx_status_t zxio_clone(zxio_t* io, zx_handle_t* out_handle);
ZXIO_EXPORT zx_status_t zxio_wait_one(zxio_t* io, zxio_signals_t signals, zx_time_t deadline,
                                      zxio_signals_t* out_observed);
ZXIO_EXPORT void zxio_wait_begin(zxio_t* io, zxio_signals_t zxio_signals, zx_handle_t* out_handle,
                                 zx_signals_t* out_zx_signals);
ZXIO_EXPORT void zxio_wait_end(zxio_t* io, zx_signals_t zx_signals,
                               zxio_signals_t* out_zxio_signals);
ZXIO_EXPORT zx_status_t zxio_sync(zxio_t* io);
ZXIO_EXPORT zx_status_t zxio_attr_get(zxio_t* io, zxio_node_attributes_t* inout_attr);
ZXIO_EXPORT zx_status_t zxio_attr_set(zxio_t* io, const zxio_node_attributes_t* attr);
ZXIO_EXPORT zx_status_t zxio_read(zxio_t* io, void* buffer, size_t capacity, zxio_flags_t flags,
                                  size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_read_at(zxio_t* io, zx_off_t offset, void* buffer, size_t capacity,
                                     zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_write(zxio_t* io, const void* buffer, size_t capacity,
                                   zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_write_at(zxio_t* io, zx_off_t offset, const void* buffer,
                                      size_t capacity, zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_readv(zxio_t* io, const zx_iovec_t* vector, size_t vector_count,
                                   zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_readv_at(zxio_t* io, zx_off_t offset, const zx_iovec_t* vector,
                                      size_t vector_count, zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_writev(zxio_t* io, const zx_iovec_t* vector, size_t vector_count,
                                    zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_writev_at(zxio_t* io, zx_off_t offset, const zx_iovec_t* vector,
                                       size_t vector_count, zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_seek(zxio_t* io, zxio_seek_origin_t start, int64_t offset,
                                  size_t* out_offset);
ZXIO_EXPORT zx_status_t zxio_truncate(zxio_t* io, uint64_t length);
ZXIO_EXPORT zx_status_t zxio_flags_get(zxio_t* io, uint32_t* out_flags);
ZXIO_EXPORT zx_status_t zxio_flags_set(zxio_t* io, uint32_t flags);
ZXIO_EXPORT zx_status_t zxio_token_get(zxio_t* io, zx_handle_t* out_token);
ZXIO_EXPORT zx_status_t zxio_vmo_get(zxio_t* io, zxio_vmo_flags_t flags, zx_handle_t* out_vmo);
ZXIO_EXPORT zx_status_t zxio_on_mapped(zxio_t* io, void* ptr);
ZXIO_EXPORT zx_status_t zxio_vmo_get_copy(zxio_t* io, zx_handle_t* out_vmo);
ZXIO_EXPORT zx_status_t zxio_vmo_get_clone(zxio_t* io, zx_handle_t* out_vmo);
ZXIO_EXPORT zx_status_t zxio_vmo_get_exact(zxio_t* io, zx_handle_t* out_vmo);
ZXIO_EXPORT zx_status_t zxio_vmo_get_exec(zxio_t* io, zx_handle_t* out_vmo);
ZXIO_EXPORT zx_status_t zxio_get_read_buffer_available(zxio_t* io, size_t* out_available);
ZXIO_EXPORT zx_status_t zxio_xattr_get(zxio_t* io, const uint8_t* name, size_t name_len,
                                       zx_status_t (*callback)(void* context,
                                                               zxio_xattr_data_t data),
                                       void* context);